objects/Patient__c.object
<CustomObject>
    <description>This object is used to save all the patient information on single page.</description>
    <fields>
        <fullName>Amount_with_tax__c</fullName>
        <formula>IF( STATE__c  = &apos;MH&apos;,(Registration_Fee__c  * 1.23),  
IF( STATE__c  = &apos;RJ&apos;,( Registration_Fee__c  * 1.34),  
IF( STATE__c = &apos;HR&apos;,( Registration_Fee__c  * 1.26), 
IF( STATE__c  = &apos;TN&apos;,( Registration_Fee__c  * 1.40),
IF( STATE__c = &apos;KR&apos;,( Registration_Fee__c  * 1.80),( Registration_Fee__c  * 1.6) ) ) ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount with tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMI_Percentage__c</fullName>
        <label>BMI Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>City_of_Patient__c</fullName>
        <label>City of Patient</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_card_Info__c</fullName>
        <label>Credit card Info</label>
        <length>12</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <inlineHelpText>Help txt</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_registration__c</fullName>
        <label>Date of registration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Details_Adress__c</fullName>
        <label>Details Adress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diseases__c</fullName>
        <label>Diseases</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BP</fullName>
                </value>
                <value>
                    <fullName>corona</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Fewer</fullName>
                </value>
                <value>
                    <fullName>Headache</fullName>
                </value>
                <value>
                    <fullName>Pneumonia</fullName>
                </value>
                <value>
                    <fullName>Typhoid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facbook_LInk__c</fullName>
        <label>Facbook LInk</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Facilities__c</fullName>
        <label>Facilities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ICU</fullName>
                </value>
                <value>
                    <fullName>General Ward</fullName>
                </value>
                <value>
                    <fullName>Medical Store</fullName>
                </value>
                <value>
                    <fullName>Dedicated Nurse</fullName>
                </value>
                <value>
                    <fullName>AC room</fullName>
                </value>
                <value>
                    <fullName>Ventilator</fullName>
                </value>
                <value>
                    <fullName>Cabin</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Condition__c</fullName>
        <formula>IF( BMI_Percentage__c  &gt;= 0.9, &apos;Healthy Patient&apos;,  IF( AND( BMI_Percentage__c &gt;= 0.7 , 
BMI_Percentage__c &lt;=  0.89 ) , &apos;Fit patient&apos;, IF( AND( BMI_Percentage__c &gt;=0.6 ,
BMI_Percentage__c &lt;= 0.79) ,&apos;normal patient&apos;,  IF( AND( BMI_Percentage__c &gt;= 0.5, 
BMI_Percentage__c &lt;= 0.59) , &apos;unhealthy&apos;,&apos;critica&apos;) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medical Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Obsevation__c</fullName>
        <label>Obsevation</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Patient_Email__c</fullName>
        <label>Patient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Patient_Location__c</fullName>
        <label>Patient Location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Registration_Done__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Registration Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Fee__c</fullName>
        <defaultValue>300</defaultValue>
        <description>Yes.you can add anythings</description>
        <inlineHelpText>Help desk</inlineHelpText>
        <label>Registration Fee</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <label>STATE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_area_rich__c</fullName>
        <label>Text area rich</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Time_of_check__c</fullName>
        <label>Time of check</label>
        <type>Time</type>
    </fields>
    <label>Patient</label>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mobile_validation_rule</fullName>
        <active>true</active>
        <description>mobile no should be 10 digit.</description>
        <errorConditionFormula>LEN(TEXT(Mobile_Number__c))&lt;&gt; 10</errorConditionFormula>
        <errorDisplayField>Mobile_Number__c</errorDisplayField>
        <errorMessage>Mobile number should be 10 digit.</errorMessage>
    </validationRules>
</CustomObject>